@@ -3,6 +3,11 @@ Released 2.0.0pre13 2003-06-xx
 
 Changes since 2.0.0pre12:
 
+ldap.async:
+- Checking type of argument writer_obj relaxed in
+  LDIFWriter.__init__() since file-like objects are
+  not necessarily an instance of file.
+
 ldap.schema:
 - ldap.schema.subentry.SubSchema.attribute_types() now correctly
   handles attribute types without NAME set
